Tweaked the footer styling: - added more specific stylings to fix the misalignment in footer - fixed the read more news link above the footer - updated alignwide class

--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -49,3 +49,9 @@
         align-items: center;
 	}
 }
+
+@mixin add-full-width() {
+	@media (min-width: $mq_breakpoint_large) {
+		width: 100%;
+	}
+}
