--- a/sass/components/content/_news-home.scss
+++ b/sass/components/content/_news-home.scss
@@ -38,6 +38,11 @@
         width: 18.75rem;
 
         @include responsive-heading(1.125rem, 1.375rem, 1.5rem);
+        @include add-full-width();
+    }
+
+    p:has(> a:only-child) {
+        @include add-full-width();
     }
 
 }
